Adding Link to Site Logo

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <header id="header">
     <nav id="nav-bar">
       <div id="site-logo">
-        <img id="logo" src="./img/logo-light.png" alt="Foundry Light Logo">
+        <a href="./index.html"><img id="logo" src="./img/logo-light.png" alt="Foundry Light Logo"></a>
       </div>
 
       <div id="nav-items-block">
@@ -41,8 +41,8 @@
 
     <div id="sm-menu-block">
       <div id="sm-middle-block">
-        <span class="sm-nav-items-middle"><a href="#">HOME</a></span>
-        <span class="sm-nav-items-middle"><a href="#">ABOUT</a></span>
+        <span class="sm-nav-items-middle"><a href="./index.html">HOME</a></span>
+        <span class="sm-nav-items-middle"><a href="./about.html">ABOUT</a></span>
         <span class="sm-nav-items-middle"><a href="#">SERVICES</a></span>
         <span class="sm-nav-items-middle"><a href="#">CONTACT US</a></span>
         <span class="sm-nav-items-middle"><a href="#">FAQ</a></span>
