--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <header id="header">
     <nav id="nav-bar">
       <div id="site-logo">
-        <img id="logo" src="./img/logo-light.png" alt="Foundry Light Logo">
+        <a href="./index.html"><img id="logo" src="./img/logo-light.png" alt="Foundry Light Logo"></a>
       </div>
 
       <div id="nav-items-block">
         <div id="middle-block">
-          <span class="nav-items-middle"><a href="#">HOME</a></span>
+          <span class="nav-items-middle"><a href="./index.html">HOME</a></span>
           <span class="nav-items-middle"><a href="./about.html">ABOUT</a></span>
           <span class="nav-items-middle"><a href="#">SERVICES</a></span>
           <span class="nav-items-middle"><a href="#">CONTACT US</a></span>
