Adding Link to Site Logo

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <div id="sm-menu-block">
       <div id="sm-middle-block">
-        <span class="sm-nav-items-middle"><a href="#">HOME</a></span>
-        <span class="sm-nav-items-middle"><a href="#">ABOUT</a></span>
+        <span class="sm-nav-items-middle"><a href="./index.html">HOME</a></span>
+        <span class="sm-nav-items-middle"><a href="./about.html">ABOUT</a></span>
         <span class="sm-nav-items-middle"><a href="#">SERVICES</a></span>
         <span class="sm-nav-items-middle"><a href="#">CONTACT US</a></span>
         <span class="sm-nav-items-middle"><a href="#">FAQ</a></span>
